fixed x-overflow issue in Blog html

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -123,7 +123,7 @@
         box-shadow: -0.5rem 0.5rem $robinBlue;
         bottom: 10px;
         left: 10px;
-        width: 111%;
+        width: 100%;
       }
     }
     .asideContent {
